[FIX] problem with overflow

--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -72,6 +72,7 @@ p {
 
 // slider
 .slider-container {
+  overflow: hidden;
   .slider-wrapper {
     display: flex;
     width: 200vw;
